// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pruebas en <ProductCard/> debe de incremetar el contador 1`] = `
<div
  className="productCard undefined"
>
  <h1>
    Product card
  </h1>
  <span>
    0
  </span>
  <button
    onClick={[Function]}
  >
    2+
  </button>
</div>
`;

exports[`pruebas en <ProductCard/> debe de mostrar el componente correctamente 1`] = `
<div
  className="productCard undefined"
>
  <h1>
    Product card
  </h1>
</div>
`;
